# ai-summary-project

./: .gitignore  CLAUDE.md  KNOWLEDGE_GRAPH.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  cli.py  config.yaml.example  deploy_production.py  pyproject.toml  qwen_client.py  requirements.txt
config/: __init__.py  config_manager.py  prompts.py
core/: __init__.py  chapter_splitter.py  integrator.py  note_generator.py  ocr_processor.py  paddleocr_adapter.py  pdf_parser.py  pipeline.py  post_processor.py
docs/: CHANGELOG.md  latex-rendering-issues.md  single-file-pipeline-plan.md
extensions/: __init__.py
extensions/knowledge_graph/: __init__.py  graph_builder.py  kb_manager.py  lightrag_adapter.py  qa_system.py  retrieval_tool.py
extensions/mindmap/: __init__.py  graph_analyzer.py  mindmap_generator.py  visualizer.py
scripts/: deploy_production.py  ocr_and_split.py  ppt2pdf.py
tests/: test_chapter_splitter.py  test_deploy_fix.py  test_integration.py  test_knowledge_graph.py  test_lightrag_basic.py  test_performance.py  test_post_processor.py  test_qwen_client.py  test_statistics.py
tests/test_output/: qa_test_results.json  test_mindmap.html  test_mindmap.md
utils/: __init__.py  file_utils.py  logger.py  statistics.py
